# SNAP-REACTORS

./: .gitignore  LICENSE  MANIFEST.in  README.md  database_status_v2_test_2022-01-25_15-19-53.txt  h  index - Shortcut.lnk  pyproject.toml  requirements.txt  setup.py  test.csv
Publications_and_results/ANS Annual 2023/: ~$S Annual 2023.docx
Publications_and_results/ANS Student 2023/: ANS Student 2023.docx
Publications_and_results/ANS Winter 2022/: ANS Winter 2022.docx
Publications_and_results/Continuous Work/: ~$-9217-GT-2022 Continous.docx  ~WRL0003.tmp
Publications_and_results/M&C 2023/: M&C 2023.docx
Publications_and_results/Milestones/: NE-9217-GT-2022-Q4 (October 31, 2022).docx
Published Work/Conferences/: ANS Annual 2023.docx
docs/: conf.py  contributors.rst  index.rst  install.rst  overview.rst
docs/Examples/: decay.rst
docs/Manual/: database_cont.rst  dummy_cont.rst  index.rst  reactorstate.rst
docs/develop/: contributing.rst  index.rst
docs/templates/: containerTemplate.py  manualTemplate.ipynb
snapReactors/: __init__.py
snapReactors/containers/: Component.py  component.py  containerTemplate.py  dimension.py  dummy.py  materials.py  property.py  reactor.py  reactorstate.py  serpent.py  templates.py  test.txt
snapReactors/data_inputfiles/: SNAP8_data.txt  rsReadertest.txt  s8er_coldpower.txt  s8er_hotpower.txt
snapReactors/databases/: Database.md  database_status_v2_test_2022-01-25_15-19-53.txt  example.hdf5
snapReactors/functions/: allowedparameters.py  checkerrors.py  cool.int  database.py  fuel.int  mmates_raw  parameters.py  (+26 more)
(+2681 files in other folders)
