[project]
name = "snapReactors"
version = "0.0.1"
description = "Data from the Systems for Nuclear Auxiliary Power (SNAP)"
readme = "README.md"
readme-content-type = "text/markdown"
authors = [
    { name = "Dan Kotlyar", email = "dan.kotlyar@me.gatech.edu" }
]
license = { file = "LICENSE" }
homepage = "https://github.com/CORE-GATECH-GROUP/SNAP-REACTORS"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "pandas",
    "h5py",
    "matplotlib",
    "pytest",
    "sympy",
    "zstandard",
    "serpentTools",
    "tabulate",
    "setuptools",
    "serpentGenerator",
    "paraview",
]
python-requires = ">=3.10"
